--- a/src/select.component.html
+++ b/src/select.component.html
@@ -1,22 +1,18 @@
 <mat-form-field appearance="fill">
-  <mat-label>{{title}}</mat-label>
+  <mat-label>{{ title }}</mat-label>
   <ng-template>
     <mat-select
-      panelClass="lazyloadselector"
-      (infiniteScroll)="getNextBatch()"
       [formControl]="appselect"
-      [complete]="offset === tempOptions.length"
+      [complete]="true"
       msInfiniteScroll
-      (openedChange)="openChanged($event)"
       [disabled]="disabled"
-      (selectionChange)="selectionChangedTrigger($event)"
     >
       <mat-option unselectable="on" [disabled]="true" *ngIf="showSearchField">
         <input type="text" placeholder="Search..." #input />
       </mat-option>
-      <mat-option *ngFor="let option of tempOptions" [value]="option.value"
-        >{{option.viewValue}}</mat-option
-      >
+      <mat-option *ngFor="let option of tempOptions" [value]="option.value">{{
+        option.viewValue
+      }}</mat-option>
     </mat-select>
   </ng-template>
 </mat-form-field>
